@@ -12,6 +12,7 @@ export(altReloadDelayedObjectFunction)
 export(altStoreDelayedObject)
 export(altStoreDelayedObjectFunction)
 export(componentNames)
+export(createExternalSeedDedupSession)
 export(extractComponents)
 export(loadArray)
 export(loadWrapperArray)
