@@ -23,6 +23,7 @@
 \alias{altStoreDelayedObject}
 \alias{altReloadDelayedObjectFunction}
 \alias{altReloadDelayedObject}
+\alias{createExternalSeedDedupSession}
 \title{Store/reload a DelayedArray}
 \usage{
 storeDelayedObject(x, handle, name, ...)
@@ -38,6 +39,25 @@ registerReloadDelayedObjectFunction(
   existing = c("old", "new", "error")
 )
 
+\S4method{storeDelayedObject}{array}(
+  x,
+  handle,
+  name,
+  version = package_version("1.1"),
+  save.external.array = FALSE,
+  ...
+)
+
+\S4method{storeDelayedObject}{ANY}(
+  x,
+  handle,
+  name,
+  version = package_version("1.1"),
+  external.dedup.session = NULL,
+  external.dedup.action = c("link", "copy", "symlink", "relsymlink"),
+  ...
+)
+
 altStoreDelayedObjectFunction(store)
 
 altStoreDelayedObject(...)
@@ -45,6 +65,8 @@ altStoreDelayedObject(...)
 altReloadDelayedObjectFunction(reload)
 
 altReloadDelayedObject(...)
+
+createExternalSeedDedupSession()
 }
 \arguments{
 \item{x}{Any of the delayed operation/array classes from \pkg{DelayedArray}.}
@@ -57,8 +79,8 @@ altReloadDelayedObject(...)
 
 For \code{altStoreDelayedObject} and \code{altReloadDelayedObject}, arguments to be passed to the alternative functions.}
 
-\item{version}{Package version of the \pkg{chihaya} format to use when loading.
-This should be retrieved from the attributes of the outermost group, typically by \code{readDelayedArray}.}
+\item{version}{Package version of the \pkg{chihaya} format to use when storing or reloading delayed objects.
+When reloading, the version should be retrieved from the attributes of the outermost group, typically by \code{readDelayedArray}.}
 
 \item{type}{String specifying the type of delayed object, i.e., operation or array.
 This corresponds to \code{delayed_type} type in the \pkg{chihaya} attributes.}
@@ -72,6 +94,13 @@ It may also be \code{NULL} to delete an existing entry in the registry.}
 
 \item{existing}{Logical scalar indicating the action to take if a function has already been registered for \code{type} and \code{subtype} -
 keep the old or new function, or throw an error.}
+
+\item{save.external.array}{Logical scalar indicating whether to save an array-like seed as an external seed,
+even if a dedicated \code{storeDelayedObject} method is available.}
+
+\item{external.dedup.session}{Session object created by \code{createExternalSeedDedupSession}.}
+
+\item{external.dedup.action}{String specifying the deduplication method to use.}
 
 \item{store}{Function (typically a generic) to store delayed objects to file.
 This should accept the same arguments as \code{storeDelayedObject}.}
@@ -108,6 +137,33 @@ This is analogous to the overrides for \code{\link{altReadObject}} and \code{\li
 Extension developers (i.e., those who write new methods for \code{storeDelayedObject} or new functions for \code{reloadDelayedObject})
 should generally use \code{altStoreDelayedObject} and \code{altReloadDelayedObject} in their method/funcion bodies.
 This ensures that any custom overrides specified by application developers are still respected in the extensions to \pkg{alabaster.matrix}.
+}
+
+\section{External seeds}{
+
+Whenever \code{storeDelayedObject} encounters a delayed operation or array-like seed for which it has no methods,
+the ANY method will save the delayed object as an \dQuote{external seed}.
+The array is saved via \code{\link{saveObject}} into a \code{seeds} directory next to the file corresponding to \code{handle}.
+A reference to this external location is then stored in the \code{name} group inside \code{handle}.
+
+Users can force this behavior for all array-like seeds by passing \code{save.external.array=TRUE} in the \code{...} arguments of \code{storeDelayedObject}.
+This instructs \code{storeDelayedObject} to save everything as external seeds, including those arrays for which it has methods.
+Doing so can be beneficial to enable deduplication, e.g., when two delayed arrays perform different operations on the same underlying seed.
+By saving the seeds externally, file management systems can identify the redundancy to save storage space.
+
+Advanced users can explicitly deduplicate external seeds by setting \code{save.external.array=TRUE} and passing \code{external.dedup.session=} to \code{storeDelayedObject}.
+The \code{external.dedup.session} object is filled up with unique seeds as \code{storeDelayedObject} is called on various DelayedArrays.
+Whenever a duplicate seed is encountered, it is not saved again, but is instead linked or copied from the file path associated with the identical external seed.
+For example, a new session can be created when saving a SummarizedExperiment to deduplicate seeds across its assays.
+
+The exact deduplication action can be specified by specifying the \code{external.dedup.action=} parameter.
+By default, \code{storeDelayedObject} attempts to create hard links, falling back to copies when a link cannot be created.
+Users can instead create copies, symbolic links to absolute paths, or even symbolic links to relative paths
+(e.g., to link to a \dQuote{neighboring} assay of the same SummarizedExperiment).
+
+When external seeds are encountered by \code{reloadDelayedObject}, they are loaded as \linkS4class{ReloadedArray}s (or some variant thereof) by \code{\link{altReadObject}}.
+Users can forcibly realize the reloaded seed into memory by passing \code{custom.takane.reload=TRUE} in \code{...} for the \code{reloadDelayedObject} call.
+This is occasionally helpful for providing a more faithful roundtrip from file back into memory.
 }
 
 \examples{
